# kamusm-rs

./: Cargo.toml  README.md
demo/: README.md  package-lock.json  test.py
demo/src/: index.html  main.js  styles.css
demo/src-tauri/: Cargo.toml  tauri.conf.json  tauri_js_log.txt
demo/src-tauri/capabilities/: default.json
demo/src-tauri/permissions/: allow-all-commands.toml
demo/src-tauri/src/: lib.rs
src/: certs.rs  client.rs  config.rs  crypto.rs  eimza.rs  identity.rs  lib.rs  main.rs  tsa.rs  verify.rs
