[package]
name = "kamusm_rs"
version = "1.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
pbkdf2 = "0.12"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc", "block-padding"] }
rand = "0.8"
der = { version = "0.7", features = ["derive", "oid"] }
cryptographic-message-syntax = "0.28"
x509-certificate = "0.25"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
whoami = "1.5"
hex = "0.4"
base64 = "0.22"
hostname = "0.4"
pem = "3.0"
cryptoki = "0.12"
secrecy = "0.10"
libloading = "0.8"
xml-canonicalization = "0.1.2"
xmltree = "0.12.0"





